add: csrf_token

--- a/blog/templates/blog/forms.html
+++ b/blog/templates/blog/forms.html
@@ -10,6 +10,7 @@ Contact Form
         <div class="col-sm-6">
             <h1>Contact Us</h1>
             <form method="POST" action="{% url 'contact' %}">
+            {% csrf_token %}
             <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
